--- a/pom.xml
+++ b/pom.xml
@@ -7,5 +7,6 @@
   <modules>
   	<module>helloweb</module>
   	<module>guestbook02</module>
+  	<module>emaillist01</module>
   </modules>
 </project>
