--- a/guestbook02/src/main/webapp/WEB-INF/web.xml
+++ b/guestbook02/src/main/webapp/WEB-INF/web.xml
@@ -1,15 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
-  <servlet>
-    <description></description>
-    <display-name>GuestBookServlet</display-name>
-    <servlet-name>GuestBookServlet</servlet-name>
-    <servlet-class>guestbook.controller.GuestBookServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>GuestBookServlet</servlet-name>
-    <url-pattern>/gb</url-pattern>
-  </servlet-mapping>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd" version="5.0">
   <display-name>guestbook02</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
